--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use NodeJS
@@ -17,4 +17,3 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
-          
