--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Use NodeJS
         uses: actions/setup-node@v1
         with: 
-          node-version: "14.x"
+          node-version: "12.x"
       - run: npm ci
       - run: npm run format:check
       - run: npm test -- --coverage
@@ -45,11 +45,11 @@ jobs:
         run: |
           zip -r build.zip ./build
           zip -r coverage.zip ./coverage
-      - name: Create a Release
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Create a Release
+      #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      #   run: npx semantic-release
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain unused-camera.surge.sh
